--- a/index.html
+++ b/index.html
@@ -3,282 +3,126 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee Tasks</title>
+    <title>Employee Task List</title>
     <style>
-         header {
-            background-color: #008080;
-            padding: 10px 20px;
-            display: flex;
-            align-items: center;
-            color: white;
-        }
-        .card {
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin: 10px 0;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-        .card h3 {
-            margin: 0;
-            color: #333;
-        }
-        .card p {
-            margin: 5px 0;
-            color: #666;
-        }
-        .card .label {
-            font-weight: bold;
-        }
-        .logo {
-            height: 120px; /* Adjust the height as needed */
-            margin-right: 20px;
-        }
-        .container {
-            max-width: 900px;
-            margin: 20px auto;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
         body {
             font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         table {
             width: 100%;
+            margin-top: 20px;
             border-collapse: collapse;
-            margin-bottom: 20px;
         }
         table, th, td {
             border: 1px solid #ddd;
         }
         th, td {
-            padding: 8px;
+            padding: 10px;
             text-align: left;
         }
         th {
-            background-color: #f4f4f4;
+            background-color: #f2f2f2;
         }
-        .button {
-            padding: 10px 15px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-        .button:hover {
-            background-color: #45a049;
-        }
-        /* Popup styles */
-        .popup {
+        #loading {
+            text-align: center;
             display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 20px;
-            border: 1px solid #ccc;
-            background-color: white;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            z-index: 1000;
         }
-        .popup button {
-            margin-top: 10px;
-        }
-        .overlay {
+        #noTasksMessage {
+            color: red;
+            text-align: center;
+            margin-top: 20px;
             display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            z-index: 999;
         }
     </style>
 </head>
-<body onload="onLoadFunction()">
-    <header>
-        <img src="https://www.bharatbiotech.com/images/bharat-biotech-logo.jpg" alt="Company Logo" class="logo">
-    </header>
-     <h1 style="text-align: center;">Ramita Task List</h1>
-    <div id="cardContainer">
-            <!-- Task cards from Lambda will be inserted here -->
-        </div>
+<body>
 
-    <br>
-    <button class="button" onclick="showAddPopup()">Add Task</button>
-    <button class="button" onclick="showRemovePopup()">Remove Task</button>
+<div class="container">
+    <h1>Employee Task List</h1>
 
-    <!-- Popup for adding tasks -->
-    <div id="addPopup" class="popup">
-        <h3>Add New Task</h3>
-        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
-            <label for="employeeName">Employee Name:</label>
-            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
+    <div id="loading">Loading tasks...</div>
 
-            <label for="taskDescription">Task:</label>
-            <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
+    <table id="taskTable" style="display: none;">
+        <thead>
+            <tr>
+                <th>Employee ID</th>
+                <th>Task</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Rate</th>
+                <th>Remarks</th>
+            </tr>
+        </thead>
+        <tbody id="taskTableBody"></tbody>
+    </table>
 
-            <label for="StartDate">Start Date:</label>
-            <input type="date" id="StartDate" name="StartDate"><br><br>
-
-            <label for="EndDate">End Date:</label>
-            <input type="date" id="EndDate" name="EndDate"><br><br>
-
-            <label for="Remarks">Remarks:</label>
-            <input type="text" id="Remarks" name="Remarks"><br><br>
-
-            <button class="button" type="submit">Add</button>
-            <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
-        </form>
+    <div id="noTasksMessage">
+        No tasks found for the Employee ID.
     </div>
+</div>
 
-    <!-- Popup for removing tasks -->
-    <div id="removePopup" class="popup">
-        <h3>Remove Task</h3>
-        <table id="popupTable">
-            <thead></thead>
-            <tbody id="popupTaskList">
-                <!-- Tasks will be populated here -->
-            </tbody>
-        </table>
-        <button class="button" onclick="closePopup('removePopup')">Close</button>
-    </div>
+<script>
+    // Hardcoded employee ID, you can replace this value or dynamically set it
+    const employeeId = '10005315'; // Replace with the employee ID you want to load by default
 
-    <!-- Overlay for popup -->
-    <div id="overlay" class="overlay" onclick="closeOverlay()"></div>
+    // Automatically fetch tasks when the page loads
+    window.onload = function() {
+        fetchTasksForEmployee(employeeId);
+    };
 
-    <!-- Success message popup -->
-    <div id="messagePopup" class="popup">
-        <p id="messageContent"></p>
-        <button class="button" onclick="closePopup('messagePopup')">Close</button>
-    </div>
+    function fetchTasksForEmployee(employeeId) {
+        const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?employeeId=${employeeId}`;
+        document.getElementById('loading').style.display = 'block'; // Show loading message
 
-    <script>
-        function onLoadFunction() {
-            console.log("Page has loaded.");
-            fetchDataFromLambda();
-        }
-
-        function fetchDataFromLambda() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
-
-            fetch(apiUrl)
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('cardContainer').innerHTML = data;
-                    populatePopupTable();
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                    document.getElementById('cardContainer').innerHTML = 'Failed to load data.';
-                });
-        }
-
-        function showAddPopup() {
-            document.getElementById('addPopup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        function showRemovePopup() {
-            document.getElementById('removePopup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        }
-
-        function closePopup(popupId) {
-            document.getElementById(popupId).style.display = 'none';
-            closeOverlay();
-        }
-
-        function closeOverlay() {
-            document.getElementById('overlay').style.display = 'none';
-        }
-
-        document.getElementById('taskForm').onsubmit = async function(event) {
-            event.preventDefault(); // Prevent the default form submission
-
-            const form = event.target;
-            const formData = new FormData(form);
-            const params = new URLSearchParams(formData).toString();
-
-            try {
-                const response = await fetch(form.action, {
-                    method: form.method,
-                    headers: {
-                        'Content-Type': form.enctype
-                    },
-                    body: params
-                });
-
-                const result = await response.json();
-                document.getElementById('messageContent').innerText = result.message;
-                document.getElementById('messagePopup').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
-
-                closePopup('addPopup'); // Close the add task popup
-            } catch (error) {
-                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
-                document.getElementById('messagePopup').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
-            }
-        };
-
-        function populatePopupTable() {
-    const tableBody = document.querySelector('#cardContainer table tbody');
-    const popupTaskList = document.getElementById('popupTaskList');
-
-    if (!tableBody) {
-        console.error('Table body not found.');
-        return;
-    }
-
-    popupTaskList.innerHTML = '';
-
-    const rows = tableBody.querySelectorAll('tr');
-    rows.forEach((row, index) => {
-        const clonedRow = row.cloneNode(true);
-        const removeButtonCell = document.createElement('td');
-
-        // Skip the remove button for the first row
-        if (index !== 0) {
-            removeButtonCell.innerHTML = `<button class="button" onclick="removeTask(${index + 1})">X</button>`;
-        }
-
-        clonedRow.appendChild(removeButtonCell);
-        popupTaskList.appendChild(clonedRow);
-    });
-}
-
-        function removeTask(rowNumber) {
-            const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your actual Lambda API Gateway URL
-
-            fetch(apiUrl, {
-                method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ rowNumber })
-            })
+        fetch(apiUrl)
             .then(response => response.json())
             .then(data => {
-                if (data.success) {
-                    alert('Task removed successfully');
-                    fetchDataFromLambda(); // Refresh the data after task removal
-                    closePopup('removePopup');
+                document.getElementById('loading').style.display = 'none'; // Hide loading message
+                const taskTable = document.getElementById('taskTable');
+                const taskTableBody = document.getElementById('taskTableBody');
+                const noTasksMessage = document.getElementById('noTasksMessage');
+
+                taskTableBody.innerHTML = '';  // Clear previous tasks
+                if (data.length > 0) {
+                    data.forEach(task => {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${task.EmployeeID}</td>
+                            <td>${task.Task}</td>
+                            <td>${task.StartDate}</td>
+                            <td>${task.EndDate}</td>
+                            <td>${task.Rate}</td>
+                            <td>${task.Remarks}</td>
+                        `;
+                        taskTableBody.appendChild(row);
+                    });
+                    taskTable.style.display = 'table';
+                    noTasksMessage.style.display = 'none';
                 } else {
-                    alert('Error removing task: ' + data.error);
+                    taskTable.style.display = 'none';
+                    noTasksMessage.style.display = 'block';
                 }
             })
             .catch(error => {
-                console.error('Error removing task:', error);
-                alert('Error removing task');
+                console.error('Error fetching tasks:', error);
+                document.getElementById('loading').innerHTML = 'Error loading tasks. Please try again later.';
             });
-        }
-    </script>
+    }
+</script>
+
 </body>
 </html>
