--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     };
 
     function fetchTasksForEmployee(employeeId) {
-        const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?employeeId=${employeeId}`;
+        const apiUrl = `const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${employeeId}`;
+`;
         document.getElementById('loading').style.display = 'block'; // Show loading message
 
         fetch(apiUrl)
