--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     };
 
     function fetchTasksForEmployee(employeeId) {
-        const apiUrl = `const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${employeeId}`;
+        const apiUrl =`https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${employeeId}`;
 `;
         document.getElementById('loading').style.display = 'block'; // Show loading message
 
