--- a/index.html
+++ b/index.html
@@ -85,12 +85,16 @@
     };
 
     function fetchTasksForEmployee(employeeId) {
-        const apiUrl =`https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${employeeId}`;
-`;
+        const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${employeeId}`;
         document.getElementById('loading').style.display = 'block'; // Show loading message
 
         fetch(apiUrl)
-            .then(response => response.json())
+            .then(response => {
+                if (!response.ok) {
+                    return response.text().then(text => { throw new Error(text); });
+                }
+                return response.json();
+            })
             .then(data => {
                 document.getElementById('loading').style.display = 'none'; // Hide loading message
                 const taskTable = document.getElementById('taskTable');
@@ -124,6 +128,7 @@
             });
     }
 </script>
+
 
 </body>
 </html>
