--- a/index.html
+++ b/index.html
@@ -90,9 +90,15 @@
 
         fetch(apiUrl)
             .then(response => {
+                // Log the response to inspect its content
+                console.log('Response:', response);
+
+                // Check if the response is OK (status 200-299)
                 if (!response.ok) {
-                    return response.text().then(text => { throw new Error(text); });
+                    return response.text().then(text => { throw new Error(`Error ${response.status}: ${text}`); });
                 }
+
+                // Try to parse the response as JSON
                 return response.json();
             })
             .then(data => {
@@ -102,6 +108,8 @@
                 const noTasksMessage = document.getElementById('noTasksMessage');
 
                 taskTableBody.innerHTML = '';  // Clear previous tasks
+
+                // Check if there are tasks in the response
                 if (data.length > 0) {
                     data.forEach(task => {
                         const row = document.createElement('tr');
@@ -124,7 +132,7 @@
             })
             .catch(error => {
                 console.error('Error fetching tasks:', error);
-                document.getElementById('loading').innerHTML = 'Error loading tasks. Please try again later.';
+                document.getElementById('loading').innerHTML = `Error loading tasks: ${error.message}`;
             });
     }
 </script>
