--- a/index.html
+++ b/index.html
@@ -84,57 +84,25 @@
         fetchTasksForEmployee(employeeId);
     };
 
-    function fetchTasksForEmployee(employeeId) {
-        const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${employeeId}`;
-        document.getElementById('loading').style.display = 'block'; // Show loading message
+                fetch(`https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeID)}`)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('cardContainer').innerHTML = data;
+                    
+                    // Show the "Edit" button if there are tasks
+                    if (data.trim() !== '') {
+                        document.getElementById('editButton').style.display = 'block';
+                    } else {
+                        document.getElementById('editButton').style.display = 'none';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                    document.getElementById('cardContainer').innerHTML = '<p>Error fetching data. Please try again later.</p>';
+                    document.getElementById('editButton').style.display = 'none';
+                });
+        });
 
-        fetch(apiUrl)
-            .then(response => {
-                // Log the response to inspect its content
-                console.log('Response:', response);
-
-                // Check if the response is OK (status 200-299)
-                if (!response.ok) {
-                    return response.text().then(text => { throw new Error(`Error ${response.status}: ${text}`); });
-                }
-
-                // Try to parse the response as JSON
-                return response.json();
-            })
-            .then(data => {
-                document.getElementById('loading').style.display = 'none'; // Hide loading message
-                const taskTable = document.getElementById('taskTable');
-                const taskTableBody = document.getElementById('taskTableBody');
-                const noTasksMessage = document.getElementById('noTasksMessage');
-
-                taskTableBody.innerHTML = '';  // Clear previous tasks
-
-                // Check if there are tasks in the response
-                if (data.length > 0) {
-                    data.forEach(task => {
-                        const row = document.createElement('tr');
-                        row.innerHTML = `
-                            <td>${task.EmployeeID}</td>
-                            <td>${task.Task}</td>
-                            <td>${task.StartDate}</td>
-                            <td>${task.EndDate}</td>
-                            <td>${task.Rate}</td>
-                            <td>${task.Remarks}</td>
-                        `;
-                        taskTableBody.appendChild(row);
-                    });
-                    taskTable.style.display = 'table';
-                    noTasksMessage.style.display = 'none';
-                } else {
-                    taskTable.style.display = 'none';
-                    noTasksMessage.style.display = 'block';
-                }
-            })
-            .catch(error => {
-                console.error('Error fetching tasks:', error);
-                document.getElementById('loading').innerHTML = `Error loading tasks: ${error.message}`;
-            });
-    }
 </script>
 </body>
 </html>
