--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style>
        header {
     background-color: #008080;
+    padding: 10px 20px;
     display: flex;
     align-items: center;
     color: white;
