--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
         h1 {
             text-align: center;
         }
-        .container {
-            max-width: 800px;
-            margin: 0 auto;
+         .container {
+            max-width: 900px;
+            margin: 20px auto;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         #loading {
             text-align: center;
             display: none;
