--- a/index.html
+++ b/index.html
@@ -47,6 +47,22 @@
             margin-top: 20px;
             display: none;
         }
+                table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 20px;
+        }
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+        th, td {
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+
     </style>
 </head>
 <body>
