--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
                     document.getElementById('noTasksMessage').style.display = 'block'; // Show no tasks message
                 }
             })
+             // Show the "Add Task" button if there are tasks
+                    if (data.trim() !== '') {
+                        document.getElementById('editButton').style.display = 'block';
+                    } else {
+                        document.getElementById('editButton').style.display = 'none';
+                    }
+                })
+
             .catch(error => {
                 console.error('Error fetching tasks:', error);
                 document.getElementById('loading').innerHTML = 'Error loading tasks. Please try again later.';
