--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             No tasks found for the Employee ID.
         </div>
         <button id="editButton" style="display:none;" onclick="showEditPopup()">Add Task</button>
+        <button id="editButton" style="display:none;" onclick="showEditPopup()">Remove Task</button>
     </div>
 
     <script>
