--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             No tasks found for the Employee ID.
         </div>
 
-        <div id="buttonContainer" style="display: flex; justify-content: center; margin-top: 20px;">
+        <div id="buttonContainer" style="display: flex;  margin-top: 20px;">
             <button id="editButton" class="button" style="margin-right: 10px;" onclick="showAddPopup()">Add Task</button>
             <button id="editButton1" class="button" onclick="showRemovePopup()">Remove Task</button>
         </div>
