--- a/index.html
+++ b/index.html
@@ -156,8 +156,10 @@
         }
 
         function showAddPopup() {
-            alert('Add Task functionality coming soon!');
+            document.getElementById('addPopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
         }
+
 
         function showRemovePopup() {
             alert('Remove Task functionality coming soon!');
