--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
     <div id="addPopup" class="popup">
         <h3>Add New Task</h3>
         <form id="taskForm" action="https://bi3hh9apo0.execute-api.ap-south-1.amazonaws.com/S1/Addtask" method="POST" enctype="application/x-www-form-urlencoded">
+            <label for="employeeid">Employee ID:</label>
+            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
+
             <label for="employeeName">Employee Name:</label>
             <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
 
@@ -110,9 +113,6 @@
 
             <label for="EndDate">End Date:</label>
             <input type="date" id="EndDate" name="EndDate"><br><br>
-
-            <label for="Remarks">Remarks:</label>
-            <input type="text" id="Remarks" name="Remarks"><br><br>
 
             <button class="button" type="submit">Add</button>
             <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
