--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
         <h3>Add New Task</h3>
         <form id="taskForm" action="https://bi3hh9apo0.execute-api.ap-south-1.amazonaws.com/S1/Addtask" method="POST" enctype="application/x-www-form-urlencoded">
             <label for="employeeid">Employee ID:</label>
-            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
+            <input type="text" id="employeeID" name="eID" required><br><br>
 
             <label for="employeeName">Employee Name:</label>
-            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
+            <input type="text" id="employeeName" name="eName" required><br><br>
 
             <label for="taskDescription">Task:</label>
             <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
